[gd_scene load_steps=10 format=2]

[ext_resource path="res://Weapons/Shovel/Shovel.gd" type="Script" id=1]
[ext_resource path="res://Scripts_General/Base_Classes/FSM/StateMachineUpdate.gd" type="Script" id=2]
[ext_resource path="res://Weapons/Shovel/ShDefaultState.gd" type="Script" id=3]
[ext_resource path="res://Weapons/Shovel/ShShotState.gd" type="Script" id=4]
[ext_resource path="res://Weapons/Shovel/ShChargedState.gd" type="Script" id=5]
[ext_resource path="res://Weapons/Shovel/ShDamagingState.gd" type="Script" id=6]
[ext_resource path="res://Weapons/Shovel/ShPickUpState.gd" type="Script" id=7]
[ext_resource path="res://Weapons/Shovel/Shovel.png" type="Texture" id=8]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 34.1333, 32.8876 )

[node name="Shovel" type="Area2D" groups=[
"Shovels",
]]
position = Vector2( 335, -23 )
collision_layer = 4
collision_mask = 7
script = ExtResource( 1 )

[node name="TEST_SPRITE" type="Sprite" parent="."]
texture = ExtResource( 8 )

[node name="StateMachine" type="Node" parent="."]
script = ExtResource( 2 )

[node name="ShDefaultState" type="Node" parent="StateMachine"]
script = ExtResource( 3 )

[node name="ShChargedState" type="Node" parent="StateMachine"]
script = ExtResource( 5 )

[node name="ShShotState" type="Node" parent="StateMachine"]
script = ExtResource( 4 )

[node name="ShDamagingState" type="Node" parent="StateMachine"]
script = ExtResource( 6 )

[node name="ShPickUpState" type="Node" parent="StateMachine"]
script = ExtResource( 7 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 55.6739, -7.37852 )
shape = SubResource( 1 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
visible = false
position = Vector2( -47.9776, -62.5688 )
scale = Vector2( 2.52064, 1.99761 )
rect = Rect2( 20, 20, 20, 20 )
[connection signal="area_entered" from="." to="." method="_on_Shovel_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
